--- a/jquery-lite/index.html
+++ b/jquery-lite/index.html
@@ -9,7 +9,10 @@
   <body>
     <div class="test-div-1">
       <ul>
-        <li>Test list item1</li>
+        <li>Test list item1 <ul>
+          <li>qwerty</li>
+          <li>abcdef</li>
+        </ul> </li>
         <li>Test list item2</li>
         <li>Test list item3</li>
         <li>Test list item4</li>
