Begin W7D5 project BenchBnB

--- a/W7/D1/todo-self/index.html
+++ b/W7/D1/todo-self/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Todo App</title>
-    <script type="text/javascript" src="bundle.js"></script>
+    <script src="./bundle.js"></script>
   </head>
   <body>
     <div id="id">
